--- a/TPMetodosAgiles/src/main/java/Presentacion/ImprimirLicencia.form
+++ b/TPMetodosAgiles/src/main/java/Presentacion/ImprimirLicencia.form
@@ -111,7 +111,7 @@
                                       <Component id="dom" min="-2" pref="200" max="-2" attributes="0"/>
                                       <Group type="102" alignment="1" attributes="0">
                                           <Component id="cargarImagen" min="-2" pref="139" max="-2" attributes="0"/>
-                                          <EmptySpace min="-2" pref="54" max="-2" attributes="0"/>
+                                          <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
@@ -247,7 +247,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/Presentacion/printer.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value=" IMPRIMIR LICENCIA"/>
+            <Property name="text" type="java.lang.String" value=" Imprimir Licencia"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel15">
