Arreglos generales y pantalla principal

--- a/TPMetodosAgiles/src/main/java/Presentacion/AltaTitular.form
+++ b/TPMetodosAgiles/src/main/java/Presentacion/AltaTitular.form
@@ -46,12 +46,12 @@
           <Border info="org.netbeans.modules.form.compat2.border.CompoundBorderInfo">
             <CompoundBorder>
               <Border PropertyName="outside" info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
-                <LineBorder roundedCorners="true">
+                <LineBorder roundedCorners="true" thickness="2">
                   <Color PropertyName="color" blue="66" green="66" red="66" type="rgb"/>
                 </LineBorder>
               </Border>
               <Border PropertyName="inside" info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
-                <LineBorder roundedCorners="true">
+                <LineBorder roundedCorners="true" thickness="2">
                   <Color PropertyName="color" blue="ff" green="ff" red="ff" type="rgb"/>
                 </LineBorder>
               </Border>
@@ -405,7 +405,7 @@
           <Properties>
             <Property name="toolTipText" type="java.lang.String" value="Ingrese como maximo 2 nombres"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Cursor Por defecto"/>
+              <Color id="Default Cursor"/>
             </Property>
           </Properties>
         </Component>
