Emitir Licencia listo. Falta arreglar temas de renovacion

--- a/TPMetodosAgiles/src/main/java/Presentacion/EleccionTipoEmision.form
+++ b/TPMetodosAgiles/src/main/java/Presentacion/EleccionTipoEmision.form
@@ -153,6 +153,9 @@
               <Image iconType="3" name="/Presentacion/left-arrow rollover.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton18ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="botonRenovacion">
           <Properties>
